# monolith

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  Makefile  README.md  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: black.yaml  build.yaml  mypy.yaml  publish.yaml  pylint.yaml  test.yaml
cpp/: CMakeLists.txt  Makefile
cpp/bindings/: bindings_atmosphere.cpp  bindings_atmosphere.hpp  bindings_celestial_bodies.cpp  bindings_celestial_bodies.hpp  bindings_dynamics.cpp  bindings_dynamics.hpp  bindings_planets.cpp  bindings_planets.hpp  bindings_time.cpp  bindings_time.hpp  bindings_utils.cpp  bindings_utils.hpp
cpp/include/monolith/: dynamics.hpp  planets.hpp
cpp/include/monolith/atmosphere/: atmosphere.hpp
cpp/include/monolith/celestial_bodies/: celestial_bodies.hpp
cpp/include/monolith/dynamics/: dynamics.hpp  j2.hpp  j3.hpp  j4.hpp  j5.hpp  j6.hpp  nbody.hpp  state.hpp  two_body.hpp
cpp/include/monolith/time/: time.hpp
cpp/include/monolith/utils/: transforms.hpp
cpp/src/: dynamics.cpp
cpp/src/atmosphere/: atomosphere.cpp
cpp/src/celestial_bodies/: celestial_bodies.cpp
cpp/src/dynamics/: j2.cpp  j3.cpp  j4.cpp  j5.cpp  j6.cpp  nbody.cpp  two_body.cpp
cpp/src/time/: time.cpp
cpp/src/utils/: transforms.cpp
python/monolith/: __init__.py  atmosphere.pyi  celestial_bodies.pyi  dynamics.pyi  time.pyi
python/monolith/utils/: __init__.pyi  transforms.pyi
scripts/: make_cspice.py  make_stubs.py  nomralize_zonals.py
src/monolith/agent/: __init__.py
src/monolith/dynamics/: two_body.py
src/monolith/states/: __init__.py
tests/dynamics/: dynamics_oracle.py  test_dynamics_unit.py
tests/states/: test_states_unit.py  test_unit.py
