[project]
name = "monolith"
version = "0.1.0"
description = ""
authors = [
    {name = "aaronberkhoff",email = "aaronberkhoff@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "mypy (>=1.16.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "monolith", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
mypy = "^1.16.0"
pylint = "^3.3.7"
black = "^25.1.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
